--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages
+name: Create api file
 
 on:
   push:
@@ -13,21 +13,6 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    # Добавляем шаг для создания api_constants.js
     - name: Generate api_constants.js
       run: |
         echo "export const BITRIX_TOKEN = '${{ secrets.BITRIX_TOKEN }}';" > ./src/api_constants.js
-
-    # Твой шаг для сборки проекта (если есть)
-    - name: Build project
-      run: |
-        # Если у тебя есть команда для сборки, вставь её здесь
-        # Например: npm run build
-        echo "Сборка проекта..."
-
-    # Шаг деплоя на GitHub Pages (это твой уже существующий шаг)
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./build  # Здесь укажи директорию с собранным проектом
