--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,23 +21,9 @@ jobs:
       run: |
         echo "export const BITRIX_TOKEN = '${{ secrets.BITRIX_TOKEN }}';" > ./src/api_constants.js
 
-    # Установка Node.js
-    - name: Setup Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-
-    # Установка зависимостей
-    - name: Install dependencies
-      run: npm install
-
-    # Сборка проекта
-    - name: Build project
-      run: npm run build
-
     # Деплой на GitHub Pages
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./build
+        publish_dir: ./
