--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,11 +19,10 @@ jobs:
     # Использование Create a File Action для создания api_constants.js
     - name: Create api_constants.js file
       uses: 1arp/create-a-file-action@0.4.5
-
       with:
         path: './src/api_constants.js'  # Путь до файла
         content: "export const BITRIX_TOKEN = '${{ secrets.BITRIX_TOKEN }}';"  # Содержимое файла
-        overwrite: true  # Перезаписывать файл, если он уже существует
+        isAbsolutePath: false  # Определяем, использовать ли абсолютный путь
 
     # Проверка, что файл api_constants.js был создан
     - name: List files in src directory
