--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,17 +16,14 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    # Использование Create a File Action для создания api_constants.js
-    - name: Create api_constants.js file
-      uses: 1arp/create-a-file-action@0.4.5
-      with:
-        path: './src/api_constants.js'  # Путь до файла
-        content: "export const BITRIX_TOKEN = '${{ secrets.BITRIX_TOKEN }}';"  # Содержимое файла
-        isAbsolutePath: false  # Определяем, использовать ли абсолютный путь
+    # Замена значения BITRIX_TOKEN в файле script.js
+    - name: Replace BITRIX_TOKEN in script.js
+      run: |
+        sed -i 's/const BITRIX_TOKEN = .*/const BITRIX_TOKEN = "${{ secrets.BITRIX_TOKEN }}";/' ./src/script.js
 
-    # Проверка, что файл api_constants.js был создан
-    - name: List files in src directory
-      run: ls -la ./src
+    # Проверка, что замена прошла успешно
+    - name: Show script.js content
+      run: cat ./src/script.js
 
     # Деплой на GitHub Pages
     - name: Deploy to GitHub Pages
