--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,6 +31,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: List all files
+        run: ls -R
+
+      # Замена значения BITRIX_TOKEN в файле script.js
+      - name: Replace BITRIX_TOKEN in script.js
+        run: |
+          sed -i 's/const BITRIX_TOKEN = .*/const BITRIX_TOKEN = "${{ secrets.BITRIX_TOKEN }}";/' ./script.js
+
+      # Проверка, что замена прошла успешно
+      - name: Show script.js content
+        run: cat ./script.js
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
